--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-analytics/data": "^3.1.0",
     "@tinacms/cli": "^0.61.25",
     "daisyui": "^2.33.0",
     "next": "12.3.1",
