--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "reading-time": "^1.5.0",
     "swr": "^1.3.0",
     "tinacms": "^0.69.19"
   },
