--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "daisyui": "^2.33.0",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
+    "nextjs-google-analytics": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-share": "^4.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "reading-time": "^1.5.0",
     "swr": "^1.3.0",
